--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,31 +2,31 @@ name: Build ROM
 
 on:
   push:
-    branches: [ main, master ]
+    branches: [main, master]
   pull_request:
-    branches: [ main, master ]
+    branches: [main, master]
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    
+
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-      
-    - name: Install dependencies
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y build-essential binutils-arm-none-eabi git libpng-dev
-        
-    - name: Build ROM
-      run: |
-        make -j$(nproc)
-        
-    - name: Upload ROM
-      uses: actions/upload-artifact@v3
-      with:
-        name: pokemonHnS-traducido-espanol
-        path: '*.gba'
-        if-no-files-found: error
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y build-essential binutils-arm-none-eabi git libpng-dev
+
+      - name: Build ROM
+        run: |
+          make -j$(nproc)
+
+      - name: Upload ROM
+        uses: actions/upload-artifact@v4
+        with:
+          name: pokemonHnS-traducido-espanol
+          path: "*.gba"
+          if-no-files-found: error
