--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,14 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y build-essential binutils-arm-none-eabi git libpng-dev
+          sudo apt-get install -y build-essential binutils-arm-none-eabi git libpng-dev gcc-arm-none-eabi
+
+      - name: Install agbcc compiler
+        run: |
+          git clone https://github.com/pret/agbcc.git tools/agbcc
+          cd tools/agbcc
+          ./build.sh
+          ./install.sh ../..
 
       - name: Build ROM
         run: |
