--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,15 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+        with:
+          lfs: false
+
+      - name: Configure git line endings
+        run: |
+          git config core.autocrlf false
+          git config core.eol lf
+          git rm --cached -r .
+          git reset --hard HEAD
 
       - name: Install dependencies
         run: |
