--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,11 @@ jobs:
       - name: Install dependencies
         run: |
           apt-get update
-          apt-get install -y build-essential git libpng-dev
+          apt-get install -y build-essential git libpng-dev dos2unix
+
+      - name: Convert .pal files to CRLF
+        run: |
+          find . -name "*.pal" -type f -exec unix2dos {} \;
 
       - name: Build ROM with modern compiler
         run: |
